--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Presentacion</title>
 </head>
-<body bgcolor="grey"">
+<body>
     <h1>Mi perfil</h1>
     <div>
         <img src="https://i.pinimg.com/originals/e0/13/66/e01366d166e79f1095aa0b426f233422.png" alt="">
